--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,332 @@
 * {
 	box-sizing: border-box;
 }
+
+body {
+	font-family: "Comfortaa", cursive;
+	margin: 0;
+	background-color: #F3F6FD;
+	font-weight: 400px;
+}
+
+.app {
+	display: flex;
+}
+
+.panel {
+	background: white;
+	min-height: 100vh;
+	padding: 30px;
+}
+
+.logo {
+	margin-bottom: 50px;
+}
+
+.menu {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	align-items: center;
+}
+
+.menu__list {
+	display: flex;
+	flex-direction: column;
+	gap: 25px;
+	align-items: center;
+}
+
+.menu__item {
+	border-radius: 14px;
+	background: #FFF;
+	box-shadow: 0px 8px 14px 0px rgba(62, 107, 224, 0.12);
+	border: none;
+	height: 45px;
+	width: 45px;
+	cursor: pointer;
+	transition: all 0.4s;
+}
+
+.menu__item:hover {
+	background: #6A6AFB;
+}
+
+.menu__item:hover img{
+	filter: brightness(0) invert(1);	
+}
+
+.menu__item_active {
+	background: #5051F9;
+}
+
+.menu__item_active img{
+	filter: brightness(0) invert(1);
+}
+.menu__add {
+	background: none;
+	border-radius: 14px;
+	border: 1px solid #CAD5FF;
+	height: 45px;
+	width: 45px;
+	cursor: pointer;
+}
+
+.menu__add:hover {
+	background: #f0f0fa;
+}
+
+.content {
+	min-width: 900px;
+	padding: 45px;
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+h1 {
+	color: #000;
+	line-height: 33px;
+	font-size: 30px;
+}
+
+.progress {
+	display: flex;
+	flex-direction: column;
+	gap: 12px;
+}
+
+.progress_text {
+	display: flex;
+	justify-content: space-between;
+	min-width: 235px;
+}
+
+.progress__name {
+	color: #232360;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+.progress__percent {
+	color: #768396;
+	font-size: 12px;
+	line-height: 13px;
+}
+
+.progress__bar{
+	width: 100%;
+	border-radius: 4px;
+	background: #E6E9ED;
+	height: 5px;
+	position: relative;
+}
+
+.progress__cover_bar{
+	position: absolute;
+	transition: all 0.5s;
+	height: 5px;
+	background: #5051F9;
+	border-radius: 4px;
+}
+
+main {
+	margin-top: 30px;
+}
+.habbit {
+	background: #FFFFFF;
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	margin-bottom: 12px;
+}
+
+.habbit__day {
+	background: #FBFAFF;
+	border-radius: 10px 0 0 10px;
+	border-right: 1px solid #E7EBFB;
+	font-size: 14px;
+	line-height: 16px;
+	padding: 20px 40px;
+	min-width: 150px;
+}
+
+.habbbit__comment {
+	font-size: 14px;
+	line-height: 16px;
+	padding: 20px 25px;
+}
+
+.habbit__delete {
+	margin-left: auto;
+	margin-right: 10px;
+	background: none;
+	border: none;
+	cursor: pointer;
+	border-radius: 5px;
+	padding: 2px;
+}
+
+.habbit__delete:hover {
+	background: #f0f0fa;
+}
+
+input {
+	border-radius: 9px;
+	border: 1px solid #E7EBFB;
+	background: #FFF;
+	padding: 12px 20px;
+	font-family: "Comfortaa", cursive;
+	flex: 1;
+	font-weight: 400;
+	font-size: 14px;
+	line-height: 16px;
+}
+
+input::placeholder{
+	color: #8899A8
+}
+
+input.error {
+	border: 1px solid red;
+}
+
+.habbbit__form {
+	display: flex;
+	gap: 15px;
+	width: 100%;
+	padding: 0px 10px 0px 25px;
+	position: relative;
+}
+
+.input_icon {
+	padding-left: 45px;
+	top: 10px;
+}
+.input__icon {
+	position: absolute;
+	top: 10px;
+	left: 45px;
+}
+
+.button {
+	border-radius: 9px;
+	background: #EDECFE;
+	border: none;
+	font-size: 13px;
+	line-height: 14px;
+	color:#5051F9;
+	padding: 14px 30px;
+	cursor: pointer;
+	font-family: "Comfortaa", cursive;
+}
+
+.button:hover{
+	background: #e7e6fd;
+}
+
+.cover {
+	position: fixed;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	top: 0;
+	background: rgba(0, 0, 0, 0.25);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.cover_hidden {
+	display: none;
+}
+
+.popup {
+	border-radius: 10px;
+	background: #FFF;
+	box-shadow: 0px 8px 14px 12px rgba(56, 56, 56, 0.05);
+	max-width: 600px;
+	width: 100%;
+	padding: 20px;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.popup__close {
+	position: absolute;
+	right: 15px;
+	top: 15px;
+	border: none;
+	background: none;
+	cursor: pointer;
+}
+
+h2 {
+	color: #000;
+text-align: center;
+font-family: Comfortaa;
+font-size: 24px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+}
+
+.icon-label {
+	color: #768396;
+	font-family: Comfortaa;
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	margin-bottom: 10px;
+}
+
+.icon-select {
+	display: flex;
+	gap: 25px;
+	margin-bottom: 20px;
+}
+
+.icon {
+	border-radius: 14px;
+	border: 1px solid #5051F9;
+	background: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 45px;
+	height: 45px;
+}
+
+.icon_active {
+	background: #5051F9;
+}
+
+.icon:hover{
+	background: #6A6AFB;
+}
+
+.icon:hover img{
+	filter: brightness(0) invert(1);
+}
+
+.icon_active img{
+	filter: brightness(0) invert(1);
+}
+
+.popup__form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 15px;
+}
+
+.popup__form input{
+	width: 100%;
+}
